Fixed issue where newer FireFox (80+) added extra margin when printing (#2512)

--- a/src/components/PrintHandler/PrintHandler.scss
+++ b/src/components/PrintHandler/PrintHandler.scss
@@ -116,4 +116,9 @@
   .App {
     display: none !important;
   }
+
+  html, body , #app {
+    // Workaround for Printing in newer version (80+) of Firefox adds extra padding/margin on page
+    max-width: none !important;
+  }
 }
